--- a/docs/26.md
+++ b/docs/26.md
@@ -2,44 +2,36 @@
 
 > 原文： [http://docs.cython.org/en/latest/src/userguide/special_methods.html](http://docs.cython.org/en/latest/src/userguide/special_methods.html)
 
-本页介绍了 Cython 扩展类型当前支持的特殊方法。所有特殊方法的完整列表显示在底部的表格中。其中一些方法的行为与 Python 对应方式不同，或者没有直接的 Python 对应方式，需要特别提及。
+本页介绍了 Cython 扩展类型当前支持的特殊方法。所有特殊方法的完整列表显示在底部的表格中。其中一些方法的行为与 Python 对应方式不同，或者没有直接的 Python 对应方式，需要特别注意。
 
-注意
-
-此页面上说的所有内容仅适用于使用`cdef class`语句定义的扩展类型。它不适用于使用 Python [`class`](https://docs.python.org/3/reference/compound_stmts.html#class "(in Python v3.7)") 语句定义的类，其中适用普通的 Python 规则。
+> 注意: 此页面上说的所有内容仅适用于使用`cdef class`语句或者`@cclass`装饰器定义的扩展类型。它不适用于使用 Python [`class`](https://docs.python.org/3/reference/compound_stmts.html#class "(in Python v3.7)") 语句定义的类 -- 适用普通的 Python 规则。
 
 ## 声明
 
-必须使用 [`def`](https://docs.python.org/3/reference/compound_stmts.html#def "(in Python v3.7)") 而不是 [`cdef`](language_basics.html#cdef) 声明扩展类型的特殊方法。这不会影响它们的性能 - Python 使用不同的调用约定来调用这些特殊方法。
+必须使用 [`def`](https://docs.python.org/3/reference/compound_stmts.html#def "(in Python v3.7)") 而不是 [`cdef`](24.md) 声明扩展类型的特殊方法。这不会影响它们的性能 - Python 使用不同的调用约定来调用这些特殊方法。
 
-## Docstrings
+## 文档字符串
 
-目前，某些扩展类型的特殊方法并未完全支持 docstrings。您可以在源中放置 docstring 作为注释，但在运行时它不会显示在相应的`__doc__`属性中。 （这似乎是一个 Python 限制 - 在 &lt;cite&gt;PyTypeObject&lt;/cite&gt; 数据结构中没有任何地方放置这样的文档字符串。）
+目前，某些扩展类型的特殊方法并未完全支持文档字符串(docstrings)。您可以在源文件中放置 docstring 作为注释，但在运行时它不会显示在相应的`__doc__`属性中。 （这似乎是一个 Python 限制 - 在 *PyTypeObject* 数据结构中没有任何地方放置这样的文档字符串）。
 
 ## 初始化方法：`__cinit__()`和`__init__()`
 
-初始化对象有两种方法。
+初始化对象有两种方法。一个普通的Python的 `__init__()` 方法和一个特殊的完成基本C级别初始化的 `__cinit__()` 方法。
 
-您应该在`__cinit__()`方法中执行对象的基本 C 级初始化，包括分配您的对象将拥有的任何 C 数据结构。您需要注意在`__cinit__()`方法中执行的操作，因为在调用对象时，该对象可能还不是完全有效的 Python 对象。因此，您应该小心地调用可能触及该对象的任何 Python 操作;特别是它的方法和任何可以被子类型覆盖的东西（因此依赖于它们已经初始化的子类型状态）。
+这两者的主要区别在于它们被调用的时机。`__cinit__()` 作为对象分配的一部分保证会被调用（但是在对象完全初始化之前）。意思是，属于子类或者是被子类覆盖的方法和对象属性在此时还没有初始化完毕，因此不可以在基类中被 `__cinit__()` 方法使用。注意，Python中的对象分配会清空所有属性并设置为零(或者`NULL`)。Cython除此之外会将所有对象属性设置为 `None`，但是重复一遍，此时属于子类或者是被子类覆盖的方法和对象属性在此时还没有初始化完毕。如果你需要在基本属性清空的时候保证它进入正确、安全的状态，那也许可以在 `__cinit__` 完成这件事。
 
-在调用`__cinit__()`方法时，已为该对象分配了内存，并且已将其初始化为 0 或 null 的任何 C 属性。 （任何 Python 属性也已初始化为 None，但您可能不应该依赖它。）保证您的`__cinit__()`方法只能被调用一次。
+而 `__init__()` 方法工作方式和Python中完全一样。它会在完成对象分配和基础初始化以及完整的继承链之后调用。在 `__init__()` 被调用的时候，对象已经完全是一个有效的Python对象了，因此所有的操作都是安全的。任何在 `__cinit__()` 不能安全的完成的操作都应该在 `__init__()` 中完成。但是在Python中，需要子类来调用继承树来保证父类的 `__init__()` 方法被调用。如果子类忘记或者拒绝调用它其中一个父类的 `__init__()` 方法，这个方法就不会被调用。除此之外，如果一个对象是被直接调用它的 `__new__()` 方法创建的（而不是调用类本身），那么任何 `__init__()` 方法都不会被调用。
 
-如果扩展类型具有基类型，则在`__cinit__()`方法之前会自动调用基类型层次结构中的任何现有`__cinit__()`方法。您无法显式调用继承的`__cinit__()`方法，基类型可以自由选择是否实现`__cinit__()`。如果需要将修改后的参数列表传递给基类型，则必须在`__init__()`方法中执行初始化的相关部分，而不是调用继承方法的常规规则。
+您应该在`__cinit__()`方法中执行对象的基本 C 级初始化，包括分配您的对象将拥有的任何 C 数据结构。您的`__cinit__()`方法保证只能被调用一次。
 
-任何无法在`__cinit__()`方法中安全完成的初始化都应在`__init__()`方法中完成。到`__init__()`被调用时，该对象是一个完全有效的 Python 对象，所有操作都是安全的。在某些情况下，可能会多次调用`__init__()`或根本不调用`__init__()`，因此在这种情况下，您的其他方法应该设计得很稳健。
+如果扩展类型具有基类（父类）类型，则在`__cinit__()`方法之前会自动调用基类型层次结构中的任何现有`__cinit__()`方法。您无法显式调用继承的`__cinit__()`方法，基类型可以自由选择是否实现`__cinit__()`。如果需要将修改后的参数列表传递给基类型，则必须在`__init__()`方法中执行初始化的相关部分，此处应用普通的调用继承方法的规则。
 
-传递给构造函数的任何参数都将传递给`__cinit__()`方法和`__init__()`方法。如果你期望在 Python 中继承你的扩展类型，你可能会发现给`__cinit__()`方法 &lt;cite&gt;*&lt;/cite&gt; 和 &lt;cite&gt;**&lt;/cite&gt; 参数是有用的，这样它就可以接受并忽略额外的参数。否则，任何具有不同签名的`__init__()`的 Python 子类都必须覆盖`__new__()` [[1]](#id4) 以及`__init__()`，Python 类的编写者不会期望得做。或者，为方便起见，如果您声明`__cinit__`()`方法不带参数（除了 self），它将忽略传递给构造函数的任何额外参数，而不会抱怨签名不匹配。
+所有传递给构造器的参数都会同时传递给 `__cinit__()` 方法和 `__init__()` 方法。如果你想继承你的扩展类型，你也行该给 `__cinit__()` 方法设置 `*` 和 `**` 参数以便让它能够接收任意多的额外参数，因此在对象分配时继承树中的传递参数是不能被子类改变的。或者，为了更方便，如果你声明你的 `__cinit__()` 不接收任何参数（除了它自己），那么它会忽视传递给构造器的额外参数而不会因为签名不匹配而发出警告.
 
-Note
+> 注意：所有构造函数参数都将作为 Python 对象传递。这意味着不可转换的 C 类型（如指针或 C ++对象）无法从 Cython 代码传递到构造函数中。如果需要，请使用工厂函数来处理对象初始化。通常可以直接调用此函数中的`__new__()`以绕过对`__init__()`构造函数的调用。
+> 注意：实现 `__cinit__()` 方法将禁止该类型使用自动序列化。
 
-所有构造函数参数都将作为 Python 对象传递。这意味着不可转换的 C 类型（如指针或 C ++对象）无法从 Cython 代码传递到构造函数中。如果需要，请使用工厂函数来处理对象初始化。直接调用此函数中的`__new__()`以绕过对`__init__()`构造函数的调用通常会有所帮助。
-
-有关示例，请参阅现有 C / C ++指针 中的 [实例化。](extension_types.html#existing-pointers-instantiation)
-
-<colgroup><col class="label"><col></colgroup>
-| [[1]](#id3) | [https://docs.python.org/reference/datamodel.html#object.__new__](https://docs.python.org/reference/datamodel.html#object.__new__) |
-
-## 定稿方法：`__dealloc__()`
+## 完成方法(Finalize)：`__dealloc__()`
 
 `__cinit__()`方法的对应物是`__dealloc__()`方法，它应该执行`__cinit__()`方法的反转。您`__cinit__()`方法中明确分配的任何 C 数据（例如通过 malloc）都应该在`__dealloc__()`方法中释放。
 
@@ -93,7 +85,6 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#special-method-names](https://docs.python.org/3/reference/datamodel.html#special-method-names)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | 名称 | 参数 | 返回类型 | 描述 |
 | --- | --- | --- | --- |
 | __cinit__ | 自我，...... |  | 基本初始化（没有直接的 Python 等价物） |
@@ -115,8 +106,7 @@ Note
 [https://docs.python.org/3/reference/datamodel.html#basic-customization](https://docs.python.org/3/reference/datamodel.html#basic-customization)
 
 您可以选择实现标准的 Python 特殊方法，如`__eq__()`或单个特殊方法`__richcmp__()`。根据应用，一种方式或另一种方式可能更好。
-
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="43%"></colgroup> 
+ 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __eq__ | 自我，是的 | object | 自我== y |
@@ -131,7 +121,6 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types](https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __ 加 __ | x, y | object | 二进制 &lt;cite&gt;+&lt;/cite&gt; 运算符 |
@@ -158,7 +147,6 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types](https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __int__ | self | object | 转换为整数 |
@@ -172,7 +160,6 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types](https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __ 我加 __ | 自我，x | object | &lt;cite&gt;+ =&lt;/cite&gt; 运算符 |
@@ -193,7 +180,6 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-container-types](https://docs.python.org/3/reference/datamodel.html#emulating-container-types)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __len__ | self | Py_ssize_t | LEN（个体经营） |
@@ -209,14 +195,12 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-container-types](https://docs.python.org/3/reference/datamodel.html#emulating-container-types)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __ 下一个 __ | self | object | 获取下一个项目（在 Python 中称为 next） |
 
 ### 缓冲接口[  [**PEP 3118** ](https://www.python.org/dev/peps/pep-3118)]（没有 Python 当量 - 见注 1）
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __getbuffer__ | self，Py_buffer &lt;cite&gt;* view&lt;/cite&gt; ，int flags |   |   |
@@ -224,7 +208,6 @@ Note
 
 ### 缓冲接口[遗留]（没有 Python 等价物 - 见注 1）
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __getreadbuffer__ | self，Py_ssize_t i，void &lt;cite&gt;** p&lt;/cite&gt; |   |   |
@@ -236,7 +219,6 @@ Note
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-container-types](https://docs.python.org/3/reference/datamodel.html#emulating-container-types)
 
-<colgroup><col width="18%"> <col width="30%"> <col width="10%"> <col width="41%"></colgroup> 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
 | __ 得到 __ | 自我，实例，阶级 | object | 获取属性的值 |
