--- a/docs/2.md
+++ b/docs/2.md
@@ -5,9 +5,9 @@
 *   [Cython - 概述](3.md)
 *   [安装 Cython](4.md)
 *   [构建 Cython 代码](5.md)
-    *   [使用 distutils 构建一个 Cython 模块](5.md#使用 distutils 构建 Cython 模块)
+    *   [使用 distutils 构建一个 Cython 模块](5.md#使用-distutils-构建-一个Cython-模块)
     *   [使用 Jupyter 笔记本](5.md#使用Jupyter笔记本)
-    *   [使用 Sage 笔记本](5.md#使用 Sage 笔记本)
+    *   [使用 Sage 笔记本](5.md#使用-Sage-笔记本)
 *   [使用更快静态类型代码](6.md)
     *   [指定变量类型](6.md#指定变量类型)
     *   [指定函数类型](6.md#指定函数类型)
