--- a/docs/25.md
+++ b/docs/25.md
@@ -4,7 +4,7 @@
 
 ## 介绍
 
-除了使用 Python 类语句创建普通的用户定义类之外，Cython 还允许您创建新的内置 Python 类型，称为扩展类型。使用 [`cdef`](language_basics.html#cdef) 类语句定义扩展类型。这是一个例子：
+除了使用 Python 类语句创建普通的用户定义类之外，Cython 还允许您创建新的内置 Python 类型，称为扩展类型。使用 `cdef` 类语句或者 `@cython.cclass`装饰器 可以定义扩展类型。这是一个例子：
 
 ```py
 from __future__ import print_function
@@ -24,40 +24,65 @@ cdef class Shrubbery:
 
 如您所见，Cython 扩展类型定义看起来很像 Python 类定义。在其中，您使用 def 语句来定义可以从 Python 代码调用的方法。您甚至可以像在 Python 中一样定义许多特殊方法，如`__init__()`。
 
-主要区别在于您可以使用 [`cdef`](language_basics.html#cdef) 语句来定义属性。属性可以是 Python 对象（通用或特定扩展类型），或者它们可以是任何 C 数据类型。因此，您可以使用扩展类型来包装任意 C 数据结构，并为它们提供类似 Python 的接口。
+主要区别在于您可以使用以下方法定义属性:
+- `cdef` 语句
+- `cython.declare()` 函数 或者
+- 属性名称的注解
+
+```py
+# 传统风格
+cdef class Shrubbery:
+
+    cdef int width
+    cdef int height
+
+# 纯Python风格
+@cython.cclass
+class Shrubbery:
+    width = declare(cython.int)
+    height: cython.int
+```
+
+属性可以是 Python 对象（通用或特定扩展类型），或者它们可以是任何 C 数据类型。因此，您可以使用扩展类型来包装任意 C 数据结构，并为它们提供类似 Python 的接口。
 
 ## 静态属性
 
-扩展类型的属性直接存储在对象的 C 结构中。这组属性在编译时是固定的;您无法在运行时向扩展类型实例添加属性，只需分配给它们，就像使用 Python 类实例一样。但是，您可以显式启用对动态分配的属性的支持，或者使用普通的 Python 类将扩展类型子类化，然后支持任意属性分配。参见 [动态属性](#dynamic-attributes) 。
+扩展类型的属性直接存储在对象的 C 结构中。这组属性在编译时是固定的;您无法在运行时像使用Python类实例一样，通过赋值向扩展类型实例添加属性。但是，您可以显式启用对动态分配的属性的支持，或者使用普通的 Python 类将扩展类型子类化，然后支持任意属性分配。参见 [动态属性](#动态属性) 。
 
-有两种方法可以访问扩展类型的属性：通过 Python 属性查找，或通过从 Cython 代码直接访问 C 结构。 Python 代码只能通过第一种方法访问扩展类型的属性，但 Cython 代码可以使用任一方法。
+有两种方法可以访问扩展类型的属性：通过 Python 属性查找，或在 Cython 代码中直接访问 C 结构。 Python 代码只能通过第一种方法访问扩展类型的属性，但 Cython 代码可以使用任一方法。
 
-默认情况下，扩展类型属性只能通过直接访问访问，而不能通过 Python 访问访问，这意味着无法从 Python 代码访问它们。要使它们可以从 Python 代码访问，您需要将它们声明为 [`public`](#public) 或 [`readonly`](#readonly) 。例如：
+默认情况下，扩展类型属性只能通过直接访问访问，而不能通过 Python 访问访问，这意味着无法从 Python 代码访问它们。要使它们可以从 Python 代码访问，您需要将它们声明为 [**public**](#公共扩展类型) 或 **readonly** 。例如：
 
 ```py
+# 传统风格
 cdef class Shrubbery:
     cdef public int width, height
     cdef readonly float depth
 
+# 纯Python风格
+import cython
+
+@cython.cclass
+class Shrubbery:
+    width = cython.declare(cython.int, visibility='public')
+    height = cython.declare(cython.int, visibility='public')
+    depth = cython.declare(cython.float, visibility='readonly')
 ```
 
-使得宽度和高度属性可以从 Python 代码中读取和写入，深度属性可读但不可写。
+使得宽度和高度属性可以从 Python 代码中读写，深度属性可读但不可写。
 
-注意
-
-您只能为 Python 访问公开简单的 C 类型，例如整数，浮点数和字符串。您还可以公开 Python 值属性。
-
-Note
-
-此外， [`public`](#public) 和 [`readonly`](#readonly) 选项仅适用于 Python 访问，而不适用于直接访问。扩展类型的所有属性始终可通过 C 级访问进行读写。
+> * 注意: 您只能把简单的 C 类型，例如整数，浮点数和字符串暴露给Python访问。您还可以暴露 使用 Python 数值的属性。
+> * 注意：此外， **public** 和 **readonly** 选项仅适用于 Python 访问，而不适用于直接访问。扩展类型的所有属性始终可通过 C 级访问进行读写。
 
 ## 动态属性
 
-默认情况下，无法在运行时向扩展类型添加属性。您有两种方法可以避免这种限制，当从 Python 代码调用方法时，这两种方法都会增加开销。特别是在调用`cpdef`方法时。
+默认情况下，无法在运行时向扩展类型添加属性。您有两种方法可以绕开这种限制，无论哪种方法，在当从 Python 代码调用方法时都会增加开销。特别是在调用`cpdef` 在 `.pyx`文件声明 或者是 用 `@ccall`
+装饰器装饰的混合方法时。
 
 第一种方法是创建一个 Python 子类：
 
 ```py
+# 经典风格
 cdef class Animal:
 
     cdef int number_of_legs
@@ -71,11 +96,28 @@ class ExtendableAnimal(Animal):  # Note that we use class, not cdef class
 dog = ExtendableAnimal(4)
 dog.has_tail = True
 
+# 纯Python风格
+@cython.cclass
+class Animal:
+
+    number_of_legs: cython.int
+
+    def __cinit__(self, number_of_legs: cython.int):
+        self.number_of_legs = number_of_legs
+
+
+class ExtendableAnimal(Animal):  # Note that we use class, not cdef class
+    pass
+
+
+dog = ExtendableAnimal(4)
+dog.has_tail = True
 ```
 
 声明`__dict__`属性是启用动态属性的第二种方式：
 
 ```py
+# 经典风格
 cdef class Animal:
 
     cdef int number_of_legs
@@ -87,35 +129,62 @@ cdef class Animal:
 dog = Animal(4)
 dog.has_tail = True
 
+# 纯Python风格
+@cython.cclass
+class Animal:
+
+    number_of_legs: cython.int
+    __dict__: dict
+
+    def __cinit__(self, number_of_legs: cython.int):
+        self.number_of_legs = number_of_legs
+
+
+dog = Animal(4)
+dog.has_tail = True
 ```
 
 ## 类型声明
 
-在您可以直接访问扩展类型的属性之前，Cython 编译器必须知道您拥有该类型的实例，而不仅仅是通用 Python 对象。它已经知道这种类型的方法的`self`参数，但在其他情况下，您将不得不使用类型声明。
+在您可以直接访问扩展类型的属性之前，Cython 编译器必须知道您拥有该类型的实例，而不仅仅是一般的 Python 对象 -- 它已经知道这种类型的方法的`self`参数。但在其他情况下，您将不得不使用类型声明。
 
 例如，在以下功能中：
 
 ```py
+# 经典风格
 cdef widen_shrubbery(sh, extra_width): # BAD
     sh.width = sh.width + extra_width
 
+# 纯Python风格
+@cython.cfunc
+def widen_shrubbery(sh, extra_width): # BAD
+    sh.width = sh.width + extra_width
 ```
 
-因为`sh`参数没有给出类型，所以将通过 Python 属性查找访问 width 属性。如果属性已被声明为 [`public`](#public) 或 [`readonly`](#readonly) ，那么这将起作用，但效率非常低。如果属性是私有的，它根本不起作用 - 代码将编译，但是在运行时会引发属性错误。
+因为`sh`参数没有给出类型，所以访问 width 属性将使用 Python 属性查找的方式。如果属性已被声明为 **public** 或 **readonly** ，那么这将起作用，但效率非常低。如果属性是私有的，它根本不起作用 - 代码将编译，但是在运行时会引发属性错误。
 
 解决方案是将`sh`声明为`Shrubbery`类型，如下所示：
 
 ```py
+# 经典风格
 from my_module cimport Shrubbery
 
 cdef widen_shrubbery(Shrubbery sh, extra_width):
     sh.width = sh.width + extra_width
 
+# 纯Python风格
+import cython
+from cython.cimports.my_module import Shrubbery
+
+@cython.cfunc
+def widen_shrubbery(sh: Shrubbery, extra_width):
+    sh.width = sh.width + extra_width
 ```
 
-现在，Cython 编译器知道`sh`有一个名为`width`的 C 属性，并将生成代码以直接有效地访问它。同样的考虑适用于局部变量，例如：
+现在，Cython 编译器知道`sh`有一个名为`width`的 C 属性，并将生成代码以直接有效地访问它。局部变量也适用，例如：
 
 ```py
+# 经典风格
 from my_module cimport Shrubbery
 
 cdef Shrubbery another_shrubbery(Shrubbery sh1):
@@ -125,55 +194,76 @@ cdef Shrubbery another_shrubbery(Shrubbery sh1):
     sh2.height = sh1.height
     return sh2
 
+
+# 纯python风格
+import cython
+from cython.cimports.my_module import Shrubbery
+
+@cython.cfunc
+def another_shrubbery(sh1: Shrubbery) -> Shrubbery:
+    sh2: Shrubbery
+    sh2 = Shrubbery()
+    sh2.width = sh1.width
+    sh2.height = sh1.height
+    return sh2
 ```
 
-Note
+> 注意：我们这里引用 `Shrubbery` 类（通过 `cimport` 语句或者是 引用 `cython.cimports` 包）, 这是在编译时声明类型所必需的。为了能够引用扩展类型，我们将类定义分为两部分，一部分在定义文件中，另一部分在相应的实现文件中。你可以阅读 [共享扩展类型](27.md) 来学习如何这样做。
 
-我们这里`cimport`类`Shrubbery`，这是在编译时声明类型所必需的。为了能够`cimport`扩展类型，我们将类定义分为两部分，一部分在定义文件中，另一部分在相应的实现文件中。你应该阅读 [共享扩展类型](sharing_declarations.html#sharing-extension-types) 来学习这样做。
-
-### 类型测试和声明
+### 类型测试和转换
 
 假设我有一个方法`quest()`，它返回`Shrubbery`类型的对象。要访问它的宽度我可以写：
 
 ```py
+# 经典风格
 cdef Shrubbery sh = quest()
 print(sh.width)
 
+# 纯Python风格
+sh: Shrubbery = quest()
+print(sh.width)
 ```
 
-这需要使用局部变量并在赋值时执行类型测试。如果 _ 知道 _，`quest()`的返回值将是`Shrubbery`类型，你可以使用强制转换来写：
+这需要使用局部变量并在赋值时执行类型测试。如果你*明确知道* `quest()`的返回值将是`Shrubbery`类型，你可以使用强制转换来写：
 
 ```py
+# 经典风格
 print( (<Shrubbery>quest()).width )
 
+# 纯Python风格
+print( cython.cast(Shrubbery, quest()).width )
 ```
 
-如果`quest()`实际上不是`Shrubbery`，可能会发生危险，因为它会尝试访问"width"这个可能不存在的 C 结构成员。在 C 级别，不是抛出 [`AttributeError`](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.7)") ，而是返回一个无意义的结果（将该地址处的任何数据解释为 int）或者尝试访问无效内存可能导致段错误。相反，人们可以写：
+如果`quest()`实际上不是`Shrubbery`，可能会发生危险，因为它会尝试访问"width"这个可能不存在的 C 结构成员。在 C 级别，会返回一个无意义的结果（将该地址处的任何数据解释为 int）或者尝试访问无效内存并产生一个段错误，不是抛出 [`AttributeError`](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.7)") 。相反，人们可以写：
 
 ```py
+# 经典风格
 print( (<Shrubbery?>quest()).width )
 
+# 纯Python风格
+print( cython.cast(Shrubbery, quest(), typecheck=True).width )
 ```
 
 在进行强制转换并允许代码继续之前执行类型检查（可能引发 [`TypeError`](https://docs.python.org/3/library/exceptions.html#TypeError "(in Python v3.7)") ）。
 
-要显式测试对象的类型，请使用`isinstance()`内置函数。对于已知的内置或扩展类型，Cython 将这些转换为快速且安全的类型检查，忽略对象的`__class__`属性等的更改，以便在成功进行`isinstance()`测试后，代码可以依赖于预期的 C 结构扩展类型及其 [`cdef`](language_basics.html#cdef) 属性和方法。
+要显式测试对象的类型，请使用`isinstance()`内置函数。对于已知的内置或扩展类型，Cython 将这些转换为快速且安全的类型检查，忽略对象的`__class__`属性等的更改。因此在成功进行`isinstance()`测试后，代码可以依赖预期的 C 结构扩展类型及其 **`cdef`** / `@cfunc` 属性和方法。
 
 ## 扩展类型和无(None)
 
-当您将参数或 C 变量声明为扩展类型时，Cython 将允许它采用值`None`以及其声明类型的值。这类似于 C 指针可以采用值`NULL`的方式，因此需要谨慎行事。只要您对它执行 Python 操作就没有问题，因为将应用完整的动态类型检查。但是，当您访问扩展类型的 C 属性时（如上面的 widen_shrubbery 函数），由您来确保您使用的引用不是`None` - 为了提高效率，Cython 不会检查这个。
+在使用Python注解或者是C风格的类型声明是，Cython处理 `None` 值的方式是不一样的。
 
-在公开将扩展类型作为参数的 Python 函数时，您需要特别小心。如果我们想让`widen_shrubbery()`成为 Python 函数，例如，如果我们只是写道：
+当您将参数或 C 变量声明为扩展类型或者Python内置类型时，Cython 将允许 `cdef` 声明和C风格的函数参数 (`func(list x)`) 声明采用 `None` 值和声明类型的值。这类似于 C 指针可以采用 `NULL` 值得的方式，因此需要谨慎行事。您只对它执行 Python 操作就没有问题，因为将应用完整的动态类型检查。但是，当您访问扩展类型的 C 属性时（如上面的 widen_shrubbery 函数），由您来确保您使用的引用不是 `None` - 为了提高效率，Cython 不会检查这个。
+
+用C风格的声明时，暴露将扩展类型作为参数的 Python 函数时，您需要特别小心：
 
 ```py
-def widen_shrubbery(Shrubbery sh, extra_width): # This is
-    sh.width = sh.width + extra_width           # dangerous!
-
+def widen_shrubbery(Shrubbery sh, extra_width): # 这个代码
+    sh.width = sh.width + extra_width           # 很危险
 ```
 
-那么我们模块的用户可以通过传递`sh`参数的`None`来使其崩溃。
+那么我们模块的用户可以通过传递 `None` 给 `sh`参数来使其崩溃。
 
-解决这个问题的一种方法是：
+在Python中，如果不清楚变量是否可以为 `None` ,但是代码要求一个非-None的数值是，应当显式的检查(是否为None)
 
 ```py
 def widen_shrubbery(Shrubbery sh, extra_width):
@@ -183,36 +273,50 @@ def widen_shrubbery(Shrubbery sh, extra_width):
 
 ```
 
-但由于预计这是一个如此频繁的要求，Cython 提供了一种更方便的方式。声明为扩展类型的 Python 函数的参数可以具有`not None`子句：
+但由于这预计会是一个非常频繁的需求(影响性能)，Cython 提供了一种更方便的方式。声明为扩展类型的 Python 函数的参数可以具有`not None`子句：
 
 ```py
 def widen_shrubbery(Shrubbery sh not None, extra_width):
-    sh.width = sh.width + extra_width
-
+    sh.width = sh.width + extra_widt
 ```
 
 现在该函数将自动检查`sh`是否为`not None`并检查它是否具有正确的类型。
 
-注意：
+在使用注解时，处理行为将遵循Python的PEP-484 类型语义（而不是上述行为）。当数值只被注解为普通类型时，不允许接收 `None`。
 
-`not None`子句只能用于 Python 函数（用 [`def`](https://docs.python.org/3/reference/compound_stmts.html#def "(in Python v3.7)") 定义）而不能用于 C 函数（用 [`cdef`](language_basics.html#cdef) 定义）。如果需要检查 C 函数的参数是否为 None，则需要自己进行。
+```py
+def widen_shrubbery(sh: Shrubbery, extra_width):  # 当sh为None时
+    sh.width = sh.width + extra_width             # 会触发TypeError - 类型错误
+```
 
-Note
+要允许 `None` 值必须显式的使用 `typing.Optional[ ]`。对于函数参数来说，当它们有一个默认参数为 `None` 时，这是自动允许的，比如：`func(x: list = None)` 不需要 `typing.Optional[ ]`。
 
-还有一些事情：
+```py
+import typing
+def widen_shrubbery(sh: typing.Optional[Shrubbery], extra_width):
+    if sh is None:
+        # We want to raise a custom exception in case of a None value.
+        raise ValueError
+    sh.width = sh.width + extra_width
+```
 
-*   保证扩展类型方法的 self 参数永远不会是`None`。
-*   将值与`None`进行比较时，请记住，如果`x`是 Python 对象，`x is None`和`x is not None`非常有效，因为它们直接转换为 C 指针比较，而`x == None`和`x != None`或者简单地使用`x`作为布尔值（如在`if x: ...`中）将调用 Python 操作，因此速度要慢得多。
+使用注解的好处在于默认情况下它们是安全的，因为要使用 `None` 值，你必须显式的允许。
+
+> * 注意：`not None` 和 `typing.Optional` 只能用于 Python 函数（用 [`def`](https://docs.python.org/3/reference/compound_stmts.html#def "(in Python v3.7)") 定义, 且没有 `@cython.cfunc` 装饰器）而不能用于 C 函数（用 [`cdef`](24.md) 或者是 `@cython.cfunc` 定义）。如果需要检查 C 函数的参数是否为 None，则需要自己检查。
+> * 一些注意事项：
+>   * 扩展类型方法的 self 参数保证永远不会是 `None` 。
+>   * 将值与 `None` 进行比较时，请记住，如果 `x` 是 Python 对象，`x is None` 和 `x is not None` 是非常高效的，因为它们直接转换为 C 指针比较，而 `x == None` 和 `x != None` 或者简单地使用 `x` 作为布尔值（如在 `if x: ...` 中）将调用 Python 操作，因此速度要慢得多。
 
 ## 特殊方法
 
-尽管原理类似，但许多`__xxx__()`扩展类型的特殊方法和它们的 Python 对应方之间存在很大差异。有一个 [单独的页面](special_methods.html#special-methods) 致力于这个主题，你应该在尝试使用扩展类型中的任何特殊方法之前仔细阅读它。
+尽管原理类似，但扩展类型的许多 `__xxx__()` 特殊方法和它们在 Python 中的对应之间存在很大差异。有一个 [单独的文档章节](26.md) 专门说这个，你应该在尝试使用扩展类型中的任何特殊方法之前仔细阅读它。
 
 ## 属性
 
 您可以使用与普通 Python 代码中相同的语法在扩展类中声明属性：
 
 ```py
+# 经典风格
 cdef class Spam:
 
     @property
@@ -229,6 +333,22 @@ cdef class Spam:
     def cheese(self):
         # This is called when the property is deleted.
 
+# 纯Python风格
+@cython.cclass
+class Spam:
+    @property
+    def cheese(self):
+        # This is called when the property is read.
+        ...
+
+    @cheese.setter
+    def cheese(self, value):
+        # This is called when the property is written.
+        ...
+
+    @cheese.deleter
+    def cheese(self):
+        # This is called when the property is deleted.
 ```
 
 还有一种特殊的（已弃用的）遗留语法，用于定义扩展类中的属性：
@@ -259,6 +379,8 @@ cdef class Spam:
 
 ```py
 # cheesy.pyx
+
+# 经典风格
 cdef class CheeseShop:
 
     cdef object cheeses
@@ -293,6 +415,43 @@ print(shop.cheese)
 del shop.cheese
 print(shop.cheese)
 
+# 纯python风格
+import cython
+
+@cython.cclass
+class CheeseShop:
+
+    cheeses: object
+
+    def __cinit__(self):
+        self.cheeses = []
+
+    @property
+    def cheese(self):
+        return "We don't have: %s" % self.cheeses
+
+    @cheese.setter
+    def cheese(self, value):
+        self.cheeses.append(value)
+
+    @cheese.deleter
+    def cheese(self):
+        del self.cheeses[:]
+
+# Test input
+from cheesy import CheeseShop
+
+shop = CheeseShop()
+print(shop.cheese)
+
+shop.cheese = "camembert"
+print(shop.cheese)
+
+shop.cheese = "cheddar"
+print(shop.cheese)
+
+del shop.cheese
+print(shop.cheese)
 ```
 
 ```py
@@ -304,50 +463,27 @@ We don't have: []
 
 ```
 
-## 子类化
+## C方法
 
-扩展类型可以从内置类型或其他扩展类型继承：
+扩展类型可以有Python方法，也可以有C方法。像声明C函数一样，C方法可以这么声明：
 
-```py
-cdef class Parrot:
-    ...
+- C方法：`cdef` 或者 `@cfunc` 装饰器，而不是 `cdef`
+- 混合方法：`cpdef` 或者 `@ccall` 装饰器
 
-cdef class Norwegian(Parrot):
-    ...
-
-```
-
-基本类型的完整定义必须可用于 Cython，因此如果基类型是内置类型，则它必须先前已声明为 extern 扩展类型。如果基类型在另一个 Cython 模块中定义，则必须将其声明为 extern 扩展类型或使用 [`cimport`](sharing_declarations.html#cimport) 语句导入。
-
-扩展类型只能有一个基类（没有多重继承）。
-
-Cython 扩展类型也可以在 Python 中进行子类化。 Python 类可以从多个扩展类型继承，前提是遵循通常的多重继承的 Python 规则（即所有基类的 C 布局必须兼容）。
-
-有一种方法可以防止扩展类型在 Python 中被子类型化。这是通过`final`指令完成的，通常使用装饰器在扩展类型上设置：
+C函数是“虚”的，在扩展类型中可以被覆盖。除此之外，**cpdef** / `@ccall` 在被当作C方法调用时甚至可以被 Python 方法覆盖。这与调用 **cdef** / `@cfunc` 方法比增加了一点额外开销（译者：有点像虚函数表）。
 
 ```py
-cimport cython
-
-@cython.final
+# 经典风格
 cdef class Parrot:
-   def done(self): pass
 
-```
 
-尝试从此类型创建 Python 子类将在运行时引发 [`TypeError`](https://docs.python.org/3/library/exceptions.html#TypeError "(in Python v3.7)") 。 Cython 还将阻止在同一模块内部对最终类型进行子类型化，即创建使用最终类型的扩展类型，因为其基类型将在编译时失败。但请注意，此限制目前不会传播到其他扩展模块，因此即使是最终扩展类型仍可以通过外部代码在 C 级进行子类型化。
-
-## C 方法
-
-扩展类型可以有 C 方法和 Python 方法。与 C 函数一样，使用 [`cdef`](language_basics.html#cdef) 或 [`cpdef`](language_basics.html#cpdef) 而不是 [`def`](https://docs.python.org/3/reference/compound_stmts.html#def "(in Python v3.7)") 声明 C 方法。 C 方法是“虚拟的”，可以在派生的扩展类型中重写。另外，当调用 C 方法时， [`cpdef`](language_basics.html#cpdef) 方法甚至可以被 python 方法覆盖。与 [`cdef`](language_basics.html#cdef) 方法相比，这增加了一些他们的调用开销：
-
-```py
-# pets.pyx
-cdef class Parrot:
 
     cdef void describe(self):
         print("This parrot is resting.")
 
+
 cdef class Norwegian(Parrot):
+
 
     cdef void describe(self):
         Parrot.describe(self)
@@ -356,33 +492,56 @@ cdef class Norwegian(Parrot):
 cdef Parrot p1, p2
 p1 = Parrot()
 p2 = Norwegian()
-print("p1:")
-p1.describe()
 print("p2:")
 p2.describe()
 
+# 纯Python风格
+import cython
+
+@cython.cclass
+class Parrot:
+
+    @cython.cfunc
+    def describe(self) -> cython.void:
+        print("This parrot is resting.")
+
+@cython.cclass
+class Norwegian(Parrot):
+
+    @cython.cfunc
+    def describe(self) -> cython.void:
+        Parrot.describe(self)
+        print("Lovely plumage!")
+
+cython.declare(p1=Parrot, p2=Parrot)
+p1 = Parrot()
+p2 = Norwegian()
+print("p2:")
+p2.describe()
 ```
 
-```py
+``` python
 # Output
 p1:
 This parrot is resting.
 p2:
 This parrot is resting.
 Lovely plumage!
-
 ```
 
-上面的例子还说明了一个 C 方法可以使用通常的 Python 技术调用一个继承的 C 方法，即：
+上面这个例子还演示了C方法可以使用普通的Python技巧来调用继承的C方法，比如：
 
 ```py
 Parrot.describe(self)
-
 ```
 
-可以使用@staticmethod 装饰器将 &lt;cite&gt;cdef&lt;/cite&gt; 方法声明为静态。这对于构造采用非 Python 兼容类型的类特别有用：
+**cdef** / `@ccall` 方法使用 `@staticmethod` 装饰器来声明为静态。这对于构建接收非Python兼容类型的类时很有用。
 
 ```py
+# 经典风格
+from libc.stdlib cimport free
+
+
 cdef class OwnedPointer:
     cdef void* ptr
 
@@ -390,19 +549,100 @@ cdef class OwnedPointer:
         if self.ptr is not NULL:
             free(self.ptr)
 
+
     @staticmethod
     cdef create(void* ptr):
         p = OwnedPointer()
         p.ptr = ptr
         return p
 
+# 纯Python风格
+import cython
+from cython.cimports.libc.stdlib import free
+
+@cython.cclass
+class OwnedPointer:
+    ptr: cython.pointer(cython.void)
+
+    def __dealloc__(self):
+        if self.ptr is not cython.NULL:
+            free(self.ptr)
+
+    @staticmethod
+    @cython.cfunc
+    def create(ptr: cython.pointer(cython.void)):
+        p = OwnedPointer()
+        p.ptr = ptr
+        return p
 ```
+
+> 注意：Cython目前不支持用 `@classmethod`装饰器来装饰 **cdef** / `@ccall` 方法。
+
+## 子类化
+
+扩展类型可以从内置类型或其他扩展类型继承：
+
+```py
+# 经典风格
+cdef class Parrot:
+    ...
+
+cdef class Norwegian(Parrot):
+    ...
+
+# 纯Python风格
+@cython.cclass
+class Parrot:
+    ...
+
+@cython.cclass
+class Norwegian(Parrot):
+    ...
+```
+
+Cython必须拥有基本类型的完整定义。因此如果基类型是内置类型，则它必须先前已声明为 extern 扩展类型。如果基类型在另一个 Cython 模块中定义，则必须将其声明为 extern 扩展类型或使用 [`cimport`](27.md) 语句 或者 从 `cython.cimports`库（纯Python风格）导入。
+
+支持多重继承，但是第二个和之后的父类必须是普通的Python类（不可以是内置类型或者扩展类型）。
+
+Python中可以继承Cython的扩展类型。 Python 类可以从多个扩展类型继承，前提是遵循通常的多重继承的 Python 规则（即所有基类的 C 布局必须兼容）。
+
+有一种方法可以防止扩展类型在 Python 中被子类型化。这是通过 `final` 指令完成的，通常使用装饰器在扩展类型上设置：
+
+```py
+# 经典风格
+cimport cython
+
+@cython.final
+cdef class Parrot:
+   def describe(self): pass
+
+cdef class Lizard:
+   @cython.final
+   cdef done(self): pass
+
+# 纯Python风格
+import cython
+
+@cython.final
+@cython.cclass
+class Parrot:
+   def describe(self): pass
+
+@cython.cclass
+class Lizard:
+
+   @cython.final
+   @cython.cfunc
+   def done(self): pass
+```
+
+尝试从 final 类型集成 或者覆盖一个 final 方法时将引发 [`TypeError`](https://docs.python.org/3/library/exceptions.html#TypeError "(in Python v3.7)") 。 Cython 还将阻止在同一模块内部对最终类型进行子类型化，即创建使用最终类型的扩展类型，因为其基类型将在编译时失败。但请注意，此限制目前不会传播到其他扩展模块，因此即使是最终扩展类型仍可以通过外部代码在 C 级进行子类型化。
 
 ## 前向声明扩展类型
 
-扩展类型可以是前向声明的，如 [`struct`](language_basics.html#struct) 和 [`union`](language_basics.html#union) 类型。这通常不是必要的，违反了 DRY 原则（不要重复自己）。
+扩展类型可以是前向声明的，如 `struct` 和 `union` 类型。这通常不是必要的，违反了 DRY 原则（不要重复自己）。
 
-如果要向前声明具有基类的扩展类型，则必须在前向声明及其后续定义中指定基类，例如：
+如果要向前声明具有基类的扩展类型，则必须在前向声明及其后续定义中都指定基类，例如：
 
 ```py
 cdef class A(B)
@@ -419,6 +659,7 @@ cdef class A(B):
 Cython 提供了两种加速扩展类型实例化的方法。第一个是直接调用`__new__()`特殊静态方法，如 Python 所知。对于扩展类型`Penguin`，您可以使用以下代码：
 
 ```py
+# 经典风格
 cdef class Penguin:
     cdef object food
 
@@ -431,13 +672,29 @@ cdef class Penguin:
 normal_penguin = Penguin('fish')
 fast_penguin = Penguin.__new__(Penguin, 'wheat')  # note: not calling __init__() !
 
+# 纯Python风格
+import cython
+
+@cython.cclass
+class Penguin:
+    food: object
+
+    def __cinit__(self, food):
+        self.food = food
+
+    def __init__(self, food):
+        print("eating!")
+
+normal_penguin = Penguin('fish')
+fast_penguin = Penguin.__new__(Penguin, 'wheat')  # note: not calling __init__() !
 ```
 
-请注意，通过`__new__()`的路径将 _ 而非 _ 调用类型的`__init__()`方法（再次，如 Python 所知）。因此，在上面的示例中，第一个实例化将打印`eating!`，但第二个实例化不会打印`eating!`。这只是`__cinit__()`方法比扩展类型的正常`__init__()`方法更安全和更可取的原因之一。
+请注意，`__new__()`的链路*不会*调用类型的`__init__()`方法（和Python中一样）。因此，在上面的示例中，第一个实例化将打印`eating!`，但第二个实例化不会打印`eating!`。这只是`__cinit__()`方法比扩展类型的正常`__init__()`方法，在初始化扩展类型并保证正确且安全的状态方面，要更安全和更可取的原因之一。
 
 第二个性能改进适用于经常连续创建和删除的类型，以便它们可以从空闲列表中受益。 Cython 为此提供了装饰器`@cython.freelist(N)`，它为给定类型创建了一个静态大小的`N`实例空闲列表。例：
 
 ```py
+# 经典风格
 cimport cython
 
 @cython.freelist(8)
@@ -448,8 +705,21 @@ cdef class Penguin:
 
 penguin = Penguin('fish 1')
 penguin = None
-penguin = Penguin('fish 2')  # does not need to allocate memory!
+penguin = Penguin('fish 2')  # 不用分配内存
 
+# 纯Python风格
+import cython
+
+@cython.freelist(8)
+@cython.cclass
+class Penguin:
+    food: object
+    def __cinit__(self, food):
+        self.food = food
+
+penguin = Penguin('fish 1')
+penguin = None
+penguin = Penguin('fish 2')  # 不用分配内存
 ```
 
 ## 从现有的 C / C ++指针实例化
