--- a/docs/25.md
+++ b/docs/25.md
@@ -724,11 +724,12 @@ penguin = Penguin('fish 2')  # 不用分配内存
 
 ## 从现有的 C / C ++指针实例化
 
-想要从现有（指向 a）数据结构实例化扩展类是很常见的，通常由外部 C / C ++函数返回。
+想要从现有的指向一个数据结构的指针来实例化一个扩展类是很常见（该指针通常由外部 C / C ++函数返回）。
 
 由于扩展类只能在其构造函数中接受 Python 对象作为参数，因此必须使用工厂函数。例如，
 
 ```py
+# 经典风格
 from libc.stdlib cimport malloc, free
 
 # Example C struct
@@ -737,7 +738,10 @@ ctypedef struct my_c_struct:
     int b
 
 cdef class WrapperClass:
-    """A wrapper class for a C/C++ data structure"""
+    """
+    A wrapper class for a C/C++ data structure
+    一个C/C++ 数据结构的包装器类
+    """
     cdef my_c_struct *_ptr
     cdef bint ptr_owner
 
@@ -746,6 +750,7 @@ cdef class WrapperClass:
 
     def __dealloc__(self):
         # De-allocate if not null and flag is set
+        # 如果非空、且标识被设置了，就释放
         if self._ptr is not NULL and self.ptr_owner is True:
             free(self._ptr)
             self._ptr = NULL
@@ -761,12 +766,15 @@ cdef class WrapperClass:
 
     @staticmethod
     cdef WrapperClass from_ptr(my_c_struct *_ptr, bint owner=False):
-        """Factory function to create WrapperClass objects from
- given my_c_struct pointer.
-
- Setting ``owner`` flag to ``True`` causes
- the extension type to ``free`` the structure pointed to by ``_ptr``
- when the wrapper object is deallocated."""
+        """
+        Factory function to create WrapperClass objects from given my_c_struct pointer.
+        一个从给定 my_c_struct指针出发，创建包装器类的工厂函数。
+        
+        Setting ``owner`` flag to ``True`` causes
+        the extension type to ``free`` the structure pointed to by ``_ptr``
+        when the wrapper object is deallocated.
+        把``owner`` flag标识设置为``True``会令扩展类型释放``_ptr``指向的结构
+        """
         # Call to __new__ bypasses __init__ constructor
         cdef WrapperClass wrapper = WrapperClass.__new__(WrapperClass)
         wrapper._ptr = _ptr
@@ -775,8 +783,11 @@ cdef class WrapperClass:
 
     @staticmethod
     cdef WrapperClass new_struct():
-        """Factory function to create WrapperClass objects with
- newly allocated my_c_struct"""
+        """
+        Factory function to create WrapperClass objects with
+        newly allocated my_c_struct
+        用新分配的my_c_struct来创建包装器类的工厂函数
+        """
         cdef my_c_struct *_ptr = <my_c_struct *>malloc(sizeof(my_c_struct))
         if _ptr is NULL:
             raise MemoryError
@@ -784,13 +795,79 @@ cdef class WrapperClass:
         _ptr.b = 0
         return WrapperClass.from_ptr(_ptr, owner=True)
 
+# 纯Python风格
+import cython
+from cython.cimports.libc.stdlib import malloc, free
+
+# Example C struct
+my_c_struct = cython.struct(
+    a = cython.int,
+    b = cython.int,
+)
+
+@cython.cclass
+class WrapperClass:
+    """A wrapper class for a C/C++ data structure"""
+    _ptr: cython.pointer(my_c_struct)
+    ptr_owner: cython.bint
+
+    def __cinit__(self):
+        self.ptr_owner = False
+
+    def __dealloc__(self):
+        # De-allocate if not null and flag is set
+        if self._ptr is not cython.NULL and self.ptr_owner is True:
+            free(self._ptr)
+            self._ptr = cython.NULL
+
+    def __init__(self):
+        # Prevent accidental instantiation from normal Python code
+        # since we cannot pass a struct pointer into a Python constructor.
+        raise TypeError("This class cannot be instantiated directly.")
+
+    # Extension class properties
+    @property
+    def a(self):
+        return self._ptr.a if self._ptr is not cython.NULL else None
+
+    @property
+    def b(self):
+        return self._ptr.b if self._ptr is not cython.NULL else None
+
+    @staticmethod
+    @cython.cfunc
+    def from_ptr(_ptr: cython.pointer(my_c_struct), owner: cython.bint=False) -> WrapperClass:
+        """Factory function to create WrapperClass objects from
+        given my_c_struct pointer.
+
+        Setting ``owner`` flag to ``True`` causes
+        the extension type to ``free`` the structure pointed to by ``_ptr``
+        when the wrapper object is deallocated."""
+        # Fast call to __new__() that bypasses the __init__() constructor.
+        wrapper: WrapperClass  = WrapperClass.__new__(WrapperClass)
+        wrapper._ptr = _ptr
+        wrapper.ptr_owner = owner
+        return wrapper
+
+    @staticmethod
+    @cython.cfunc
+    def new_struct() -> WrapperClass:
+        """Factory function to create WrapperClass objects with
+        newly allocated my_c_struct"""
+        _ptr: cython.pointer(my_c_struct) = cython.cast(
+                cython.pointer(my_c_struct), malloc(cython.sizeof(my_c_struct)))
+        if _ptr is cython.NULL:
+            raise MemoryError
+        _ptr.a = 0
+        _ptr.b = 0
+        return WrapperClass.from_ptr(_ptr, owner=True)
 ```
 
-然后，从现有的`my_c_struct`指针创建`WrapperClass`对象，可以在 Cython 代码中使用`WrapperClass.from_ptr(ptr)`。要分配新结构并同时包装它，可以使用`WrapperClass.new_struct`代替。
+然后，从现有的`my_c_struct`指针创建`WrapperClass`对象，可以在 Cython 代码中使用`WrapperClass.from_ptr(ptr)`；如果要分配新结构并同时包装它，可以使用`WrapperClass.new_struct`。
 
-如果需要，可以从同一指针创建多个 Python 对象，这些指针指向相同的内存中数据，尽管在解除分配时必须小心，如上所示。此外，`ptr_owner`标志可用于控制哪个`WrapperClass`对象拥有指针并负责解除分配 - 在示例中默认设置为`False`，可以通过调用`from_ptr(ptr, owner=True)`来启用。
+如果需要的话，可以从同一指针创建多个 Python 对象，这些指针指向相同的内存中数据（尽管在解除分配时必须小心，如上所示）。此外，`ptr_owner`标志可用于控制哪个`WrapperClass`对象拥有指针并负责解除分配 - 在示例中默认设置为`False`，可以通过调用`from_ptr(ptr, owner=True)`来启用。
 
-GIL 必须 _ 而不是 _ 在`__dealloc__`中释放，或者如果是，则使用另一个锁定，在这种情况下，或者在多次解除分配时可能发生竞争条件。
+GIL *绝不可以* 在`__dealloc__`中被释放，或者使用另一个锁定。如果发生这种情况或者其他竞争的情况下，可能会进行多次解除分配。
 
 作为对象构造函数的一部分，`__cinit__`方法具有 Python 签名，这使得它无法接受`my_c_struct`指针作为参数。
 
@@ -798,35 +875,40 @@ GIL 必须 _ 而不是 _ 在`__dealloc__`中释放，或者如果是，则使用
 
 ```py
 Cannot convert 'my_c_struct *' to Python object
-
 ```
 
-这是因为 Cython 不能自动将指针转换为 Python 对象，这与`int`等本机类型不同。
+这是因为 Cython 不能自动将指针转换为 Python 对象，这与 `int` 等原生类型不同。
 
-请注意，对于本机类型，Cython 将复制该值并创建新的 Python 对象，而在上述情况下，不会复制数据，并且取消分配内存是扩展类的责任。
+请注意，对于原生类型，Cython 将复制值并创建新的 Python 对象，而在上述情况下，不会复制数据，且取消分配内存是扩展类的责任。
 
-## 使扩展类型弱引用
+## 扩展类型弱引用化
 
-默认情况下，扩展类型不支持对它们进行弱引用。您可以通过声明名为`__weakref__`的对象类型的 C 属性来启用弱引用。例如，：
+默认情况下，扩展类型不支持对它们进行弱引用。您可以通过声明名为`__weakref__`的 `object` 类型的 C 属性来允许弱引用。例如，：
 
 ```py
+# 经典风格
 cdef class ExplodingAnimal:
     """This animal will self-destruct when it is
  no longer strongly referenced."""
 
     cdef object __weakref__
 
+# 纯Python风格
+@cython.cclass
+class ExplodingAnimal:
+    """This animal will self-destruct when it is
+    no longer strongly referenced."""
+
+    __weakref__: object
 ```
 
 ## 控制 CPython 中的释放和垃圾收集
 
-Note
-
-本节仅适用于 Python 的常用 CPython 实现。 PyPy 等其他实现的工作方式不同。
+> 注意: 本节仅适用于 Python 的常用 CPython 实现。 PyPy 等其他实现的工作方式不同。
 
 ### 介绍
 
-首先，很好理解在 CPython 中有两种方法可以触发 Python 对象的释放：CPython 对所有对象使用引用计数，并且任何引用计数为零的对象都会被立即释放。这是解除分配对象的最常用方法。例如，考虑一下
+首先, 在 CPython 中有两种方法可以触发 Python 对象的释放：CPython 对所有对象使用引用计数，并且任何引用计数为零的对象都会被立即释放。这是解除分配对象的最常用方法。例如:
 
 ```py
 >>> x = "foo"
@@ -834,9 +916,9 @@ Note
 
 ```
 
-执行第二行后，不再引用字符串`"foo"`，因此将其取消分配。这是使用`tp_dealloc`插槽完成的，可以通过实现`__dealloc__`在 Cython 中自定义。
+执行第二行后，不再引用字符串`"foo"`，因此将其取消分配。这是使用`tp_dealloc`插槽完成的，可以通过实现`__dealloc__`来在 Cython 中自定义。
 
-第二种机制是循环垃圾收集器。这是为了解决诸如的循环参考循环
+第二种机制是循环垃圾收集器。这是为了解决循环引用的问题，比如下面：
 
 ```py
 >>> class Object:
@@ -845,14 +927,13 @@ Note
 ...     x = Object()
 ...     y = [x]
 ...     x.attr = y
-
 ```
 
-调用`make_cycle`时，会创建一个参考循环，因为`x`引用`y`，反之亦然。即使在`make_cycle`返回后无法访问`x`或`y`，两者的引用计数均为 1，因此不会立即取消分配。在常规时间，垃圾收集器运行，它会注意到参考周期（使用`tp_traverse`插槽）并将其中断。打破引用循环意味着在循环中获取一个对象并将其中的所有引用移除到其他 Python 对象（我​​们称之为 _ 清除 _ 一个对象）。清除与解除分配几乎相同，只是实际对象尚未释放。对于上例中的`x`，`x`的属性将从`x`中删除。
+调用`make_cycle`时，会创建一个引用循环，因为`x`引用`y`，反过来也是。即使在`make_cycle`返回后无法访问`x`或`y`，两者的引用计数均为 1，因此不会立即取消分配。在常规时间，垃圾收集器运行，它会注意到参考周期（使用`tp_traverse`插槽）并将其中断。打破引用循环意味着在循环中获取一个对象并将其中的所有引用移除到其他 Python 对象（我​​们称之为*清除*一个对象）。清除与解除分配几乎是一样的，只是实际对象尚未释放。对于上例中的`x`，`x`的属性将从`x`中删除。
 
-请注意，在参考周期中只清除一个对象就足够了，因为在清除一个对象后不再有一个周期。一旦循环中断，通常基于 refcount 的释放将实际从内存中删除对象。清除在`tp_clear`插槽中实现。正如我们刚刚解释的那样，循环中的一个对象实现`tp_clear`就足够了。
+请注意，在参考周期中只清除一个对象就足够了，因为在清除一个对象后不再有一个周期。一旦循环中断，通常基于引用计数的释放将实际从内存中删除对象。清除在`tp_clear`插槽中实现。正如我们刚刚解释的那样，循环中的一个对象实现`tp_clear`就足够了。
 
-### 启用释放垃圾箱
+### 启用垃圾释放箱
 
 在 CPython 中，可以创建深度递归对象。例如：
 
@@ -863,31 +944,39 @@ Note
 
 ```
 
-现在假设我们删除了最后的`L`。然后`L`解除分配`L[0]`，解除分配`L[0][0]`，依此类推，直到达到`2**20`的递归深度。这种解除分配是在 C 中完成的，这种深度递归可能会溢出 C 调用堆栈，从而导致 Python 崩溃。
+现在假设我们删除了最后的`L`。然后`L`解除分配`L[0]`，`L[0]` 解除分配`L[0][0]`，依此类推，直到达到`2**20`的递归深度。这种解除分配是在 C 中完成的，这种深度递归可能会溢出 C 调用堆栈，从而导致 Python 崩溃。
 
-CPython 发明了一种称为 _ 垃圾桶 _ 的机制。它通过延迟一些解除分配来限制解除分配的递归深度。
+CPython 发明了一种称为*垃圾箱*的机制。它通过延迟一些解除分配来限制解除分配的递归深度。
 
 默认情况下，Cython 扩展类型不使用垃圾桶，但可以通过将`trashcan`指令设置为`True`来启用它。例如：
 
 ```py
+# 经典风格
 cimport cython
 @cython.trashcan(True)
 cdef class Object:
     cdef dict __dict__
 
+# 纯Python风格
+import cython
+@cython.trashcan(True)
+@cython.cclass
+class Object:
+    __dict__: dict
 ```
 
-Trashcan 用法由子类继承（除非`@cython.trashcan(False)`明确禁用）。像`list`这样的内置类型使用垃圾桶，因此它的子类默认使用垃圾桶。
+子类可以继承（父类使用）垃圾箱的行为（除非用`@cython.trashcan(False)`明确禁用）。像`list`这样的内置类型使用垃圾桶，它的子类也会默认使用。
 
 ### 禁用循环中断（`tp_clear`）
 
-默认情况下，每种扩展类型都支持 CPython 的循环垃圾收集器。如果可以引用任何 Python 对象，Cython 将自动生成`tp_traverse`和`tp_clear`插槽。这通常是你想要的。
+默认情况下，每种扩展类型都支持 CPython 的循环垃圾收集器。对于任何可以引用的 Python 对象，Cython 将自动生成`tp_traverse`和`tp_clear`插槽。通常情况下这能满足你的需求。
 
-至少有一个原因可能不是你想要的：如果你需要清理`__dealloc__`特殊功能中的一些外部资源而你的对象恰好处于参考周期，垃圾收集器可能已经触发了一个`tp_clear`清除对象（参见 [简介](#dealloc-intro) ）。
+有一个你可能不想要这么做的原因是：如果你需要清理`__dealloc__`特殊功能中的一些外部资源而你的对象恰好处于引用周期，垃圾收集器可能已经触发了一个`tp_clear`清除对象。
 
-在这种情况下，调用`__dealloc__`时，任何对象引用都会消失。现在，您的清理代码无法访问它必须清理的对象。要解决此问题，您可以使用`no_gc_clear`指令禁用特定类的清除实例：
+在这种情况下，调用`__dealloc__`时，任何对象引用都会消失。现在，您的清理代码无法访问它必须清理的对象。要解决此问题，您可以使用`no_gc_clear`指令来禁止清除特定类的实例：
 
 ```py
+# 经典风格
 @cython.no_gc_clear
 cdef class DBCursor:
     cdef DBConnection conn
@@ -896,45 +985,61 @@ cdef class DBCursor:
     def __dealloc__(self):
         DBAPI_close_cursor(self.conn.raw_conn, self.raw_cursor)
 
+# 纯Python风格
+@cython.no_gc_clear
+@cython.cclass
+class DBCursor:
+    conn: DBConnection
+    raw_cursor: cython.pointer(DBAPI_Cursor)
+    # ...
+    def __dealloc__(self):
+        DBAPI_close_cursor(self.conn.raw_conn, self.raw_cursor)
 ```
 
-此示例尝试在销毁 Python 对象时通过数据库连接关闭游标。 `DBConnection`对象通过`DBCursor`的引用保持活动状态。但是如果游标恰好在引用循环中，则垃圾收集器可能会删除数据库连接引用，这使得无法清理游标。
+此示例尝试在 Python 对象被销毁时关闭数据库链接的游标。 `DBConnection` 对象通过 `DBCursor` 的引用保持活动状态。但是如果游标恰好在引用循环中，则垃圾收集器可能会删除数据库连接引用，这使得无法清理游标。
 
-如果使用`no_gc_clear`，则任何给定的参考循环必须包含至少一个没有 `no_gc_clear`的对象 _。否则，循环不能被破坏，这是内存泄漏。_
+如果使用`no_gc_clear`，则任何给定的参考循环必须包含至少一个***没有*** `no_gc_clear`的对象。否则，循环不能被破坏，这是内存泄漏。
 
 ### 禁用循环垃圾收集
 
-在极少数情况下，可以保证扩展类型不参与循环，但编译器将无法证明这一点。如果类永远不能引用自身，甚至间接引用它，情况就是这样。在这种情况下，您可以使用`no_gc`指令手动禁用循环收集，但要注意这样做实际上扩展类型可以参与循环可能会导致内存泄漏
+在极少数情况下，你可以保证扩展类型绝对不会参与循环（编译器将无法证明这一点）。也许是类永远不能引用自身，甚至间接引用它，情况就是这样。在这种情况下，您可以使用`no_gc`指令手动禁用循环收集，但要注意这样做实际上扩展类型可以参与循环可能会导致内存泄漏
 
 ```py
+# 经典风格
 @cython.no_gc
 cdef class UserInfo:
     cdef str name
     cdef tuple addresses
 
+# 纯Python风格
+@cython.no_gc
+@cython.cclass
+class UserInfo:
+    name: str
+    addresses: tuple
 ```
 
-如果您可以确定地址仅包含对字符串的引用，则上述内容将是安全的，并且可能会产生显着的加速，具体取决于您的使用模式。
+如果您可以确定地址仅包含对字符串的引用，则上述内容将是安全的，且可能会产生显着的加速（取决于你的使用方式）。
 
-## 控制酸洗
+## 控制对象序列化(Pickling)
 
-默认情况下，Cython 将生成一个`__reduce__()`方法，以便当且仅当其每个成员都可以转换为 Python 且没有`__cinit__`方法时才允许修改扩展类型。要求此行为（即，如果无法对类进行 pickle，则在编译时抛出错误）使用`@cython.auto_pickle(True)`修饰类。也可以用`@cython.auto_pickle(False)`注释以获得在任何情况下都不生成`__reduce__`方法的旧行为。
+默认情况下，Cython 将生成一个`__reduce__()`方法以便，当且仅当其每个成员都可以转换为 Python 且没有`__cinit__`方法时，允许将扩展类型序列化。使用`@cython.auto_pickle(True)`装饰这个类以允许序列化行为（即，如果无法对类进行 pickle，则在编译时抛出错误）。也可以用`@cython.auto_pickle(False)`注解来保证在任何情况下都不生成`__reduce__`方法。
 
-手动实现`__reduce__`或 &lt;cite&gt;__reduce_ex__`&lt;/cite&gt; 方法也将禁用此自动生成，并可用于支持更复杂类型的酸洗。
+手动实现`__reduce__`或 `__reduce_ex__` 方法也将禁用此自动生成，并可用于支持更复杂类型的对象序列化。
 
 ## 公共和外部扩展类型
 
 扩展类型可以声明为 extern 或 public。外部扩展类型声明使外部 C 代码中定义的扩展类型可用于 Cython 模块。公共扩展类型声明使得在 Cython 模块中定义的扩展类型可用于外部 C 代码。
 
+> 注意：纯Python风格下，Cython目前还不支持将扩展类型声明为extern或者public。开发人员认为这是合理的，因为public/extern的扩展类型主要是在 `.pxd` 文件而不是 `.py`文件中声明。
+
 ### 外部扩展类型
 
 外部扩展类型允许您访问 Python 核心或非 Cython 扩展模块中定义的 Python 对象的内部。
 
-Note
+> 注意：在以前版本的 Pyrex 中，extern 扩展类型也用于引用另一个 Pyrex 模块中定义的扩展类型。虽然你仍然可以做到这一点，但 Cython 为此提供了更好的机制。参见 [在 Cython 模块之间共享声明](27.md)。
 
-在以前版本的 Pyrex 中，extern 扩展类型也用于引用另一个 Pyrex 模块中定义的扩展类型。虽然你仍然可以做到这一点，但 Cython 为此提供了更好的机制。参见 [在 Cython 模块](sharing_declarations.html#sharing-declarations) 之间共享声明。
-
-下面是一个示例，它将让您了解内置复杂对象的 C 级成员：
+下面这个例子演示了如何从内置复杂对象中获取 C 级别的成员：
 
 ```py
 from __future__ import print_function
@@ -955,49 +1060,39 @@ def spam(complex c):
 
 ```
 
-Note
+> 注意：一些重要的事情：
+> 1.  在此示例中使用 `ctypedef` 类。这是因为，在 Python 头文件中，`PyComplexObject` 结构声明为：
+>     ```py
+>     typedef struct {
+>         ...
+>     } PyComplexObject;
+>     ```
+>     在运行期间，导入Cython C-扩展模块将会检查 `__builtin__.complex` 的 `tp_basicsize` 是否与 `sizeof(`PyComplexObject)` 符合。如果使用一个版本的 `complexobject.h` 头文件编译 Cython
+>     extension 模块但导入到有不一样头文件的 Python 中，此检查可能会失败。可以使用名称规范子句中的 `check_size` 来调整此检查。
+> 2.  除了扩展类型的名称外，还指定了可以在其中找到类型对象的模块。请参阅下面的隐式导入部分。
+> 3.  声明外部扩展类型时，不要声明任何方法。调用它们不需要声明方法，因为调用是 Python 方法调用。而且，与 `struct` 和 `union` 一样，如果你的扩展类声明在块中的 `cdef` extern 内，你只需要声明您希望访问的 C 成员。
 
-一些重要的事情：
+### 名称规范子句
 
-1.  在此示例中，已使用 [`ctypedef`](language_basics.html#ctypedef) 类。这是因为，在 Python 头文件中，`PyComplexObject`结构声明为：
-
-    ```py
-    typedef struct {
-        ...
-    } PyComplexObject;
-
-    ```
-
-    在运行时，将导入`__builtin__.complex`的`tp_basicsize`与`sizeof(`PyComplexObject)`匹配的 Cython c 扩展模块时执行检查。如果使用一个版本的`complexobject.h`标头编译 Cython c-extension 模块但导入到具有更改标头的 Python 中，则此检查可能会失败。可以使用名称规范子句中的`check_size`来调整此检查。
-
-2.  除了扩展类型的名称外，还指定了可以在其中找到类型对象的模块。请参阅下面的隐式导入部分。
-
-3.  声明外部扩展类型时，不要声明任何方法。为了调用它们，不需要声明方法，因为调用是 Python 方法调用。另外，与 [`struct`](language_basics.html#struct) 和 [`union`](language_basics.html#union) 一样，如果你的扩展类声明在块中的 [`cdef`](language_basics.html#cdef) extern 内，你只需要声明您希望访问的 C 成员。
-
-### 名称规范条款
-
-方括号中的类声明部分是仅适用于外部或公共扩展类型的特殊功能。该条款的完整形式是：
+类声明中的方括号部分是仅适用于外部或公共扩展类型的特殊特性。该子句的完整形式是：
 
 ```py
 [object object_struct_name, type type_object_name, check_size cs_option]
-
 ```
 
-哪里：
+*   `object_struct_name` 是类型假定的 C 结构名称。
+*   `type_object_name` 是类型假定的静态声明的类型对象名称。
+*   `cs_option` 是 `warn`（默认），`error` 或 `ignore`，仅用于外部扩展类型。如果是 `error`，在编译时找到的 `sizeof(object_struct)` 必须与类型的运行时 `tp_basicsize` 完全匹配，否则模块导入将失败并显示错误。如果是 `warn` 或 `ignore` ，则允许 `object_struct` 小于类型的 `tp_basicsize` ，这表示运行时类型可能是更新模块的一部分，并且外部模块的开发人员向后扩展了对象兼容的方式（仅在对象的末尾添加新字段）。如果 `warn` ，在这种情况下将发出警告。
 
-*   `object_struct_name`是为类型的 C 结构假设的名称。
-*   `type_object_name`是为类型的静态声明的类型对象假定的名称。
-*   `cs_option`是`warn`（默认值），`error`或`ignore`，仅用于外部扩展类型。如果`error`，在编译时找到的`sizeof(object_struct)`必须与类型的运行时`tp_basicsize`完全匹配，否则模块导入将失败并显示错误。如果`warn`或`ignore`，允许`object_struct`小于类型的`tp_basicsize`，这表示运行时类型可能是更新模块的一部分，并且外部模块的开发人员向后扩展了对象兼容的方式（仅在对象的末尾添加新字段）。如果`warn`，在这种情况下将发出警告。
+子句可以按任何顺序书写。
 
-条款可以按任何顺序书写。
-
-如果扩展类型声明在块中的 [`cdef`](language_basics.html#cdef) extern 内，则需要 object 子句，因为 Cython 必须能够生成与头文件中的声明兼容的代码。否则，对于 extern 扩展类型，object 子句是可选的。
+如果扩展类型声明是写在`cdef` extern块中的，需要写 object 子句，因为 Cython 必须能够生成与头文件中的声明兼容的代码。不然的话，对于 extern 扩展类型，object 子句是可选的。
 
 对于公共扩展类型，object 和 type 子句都是必需的，因为 Cython 必须能够生成与外部 C 代码兼容的代码。
 
 ### 属性名称匹配和别名
 
-有时，`object_struct_name`中指定的类型的 C 结构可能会使用不同的字段标签，而不是`PyTypeObject`中的标签。这在手工编码的 C 扩展中很容易发生，其中`PyTypeObject_Foo`具有 getter 方法，但名称与`PyFooObject`中的名称不匹配。例如，在 NumPy 中，python-level `dtype.itemsize`是 C struct 字段`elsize`的 getter。 Cython 支持别名字段名称，以便可以在 Cython 代码中编写`dtype.itemsize`，这些代码将被编译为 C struct 字段的直接访问，而无需通过相当于`dtype.__getattr__('itemsize')`的 C-API。
+有时，`object_struct_name` 中指定的类型的 C 结构可能会使用与 `PyTypeObject` 中不同的字段标签。`PyTypeObject_Foo` 具有 getter 方法，但名称与 `PyFooObject` 中的名称不匹配的情况，在手写的 C 扩展中很容易发生。例如，在 NumPy 中，python-level `dtype.itemsize` 是 C struct 字段 `elsize` 的 getter。 Cython 支持字段设置别名，以便可以在 Cython 代码中编写 `dtype.itemsize` ，这些代码将被编译为 C struct 字段的直接访问，而无需通过相当于 `dtype.__getattr__('itemsize')` 的 C-API。
 
 例如，我们可能有一个扩展模块`foo_extension`：
 
@@ -1014,7 +1109,7 @@ cdef class Foo:
 
 但是文件`foo_nominal.h`中的 C 结构：
 
-```py
+```c
 typedef struct {
      PyObject_HEAD
      int f0;
@@ -1024,7 +1119,7 @@ typedef struct {
 
 ```
 
-请注意，结构使用`f0`，`f1`，`f2`，但它们是`Foo`中的`field0`，`field1`和`field2`。我们得到了这种情况，包括带有该结构的头文件，我们希望编写一个函数来对值进行求和。如果我们编写扩展模块`wrapper`：
+请注意，结构使用`f0`，`f1`，`f2`，但它们是 `Foo` 中的 `field0` ， `field1` 和 `field2`。我们遇到过这种情况以及带有该结构的头文件，此时我们编写一个函数来对值进行求和。如果我们这么编写扩展模块 `wrapper`：
 
 ```py
 cdef extern from "foo_nominal.h":
@@ -1040,7 +1135,7 @@ def sum(Foo f):
 
 ```
 
-那么`wrapper.sum(f)`（其中`f = foo_extension.Foo(1, 2, 3)`）仍将使用相当于的 C-API：
+那么 `wrapper.sum(f)`（其中 `f = foo_extension.Foo(1, 2, 3)` ）仍将使用相当于的 C-API：
 
 ```py
 return f.__getattr__('field0') +
@@ -1049,7 +1144,7 @@ return f.__getattr__('field0') +
 
 ```
 
-而不是所需的 C 当量`return f-&gt;f0 + f-&gt;f1 + f-&gt;f2`。我们可以使用以下字段对字段进行别名：
+而不是所需的 C等效代码 `return f->f0 + f->f1 + f->f2`。我们可以使用以下代码对字段设置别名：
 
 ```py
 cdef extern from "foo_nominal.h":
@@ -1065,7 +1160,36 @@ def sum(Foo f) except -1:
 
 ```
 
-现在 Cython 将用对 CooStructNominal 字段的直接 C 访问来替换慢`__getattr__`。这在直接处理 Python 代码时很有用。即使 Python 和 C 中的字段名称不同，也不需要对 Python 进行任何更改以实现显着的加速。当然，应该确保字段是等价的。
+现在 Cython 将用对 CooStructNominal 字段的较慢的 `__getattr__` 替换为直接的C访问。这在直接处理 Python 代码时很有用。即使 Python 和 C 中的字段名称不同，也不需要对 Python 进行任何更改以实现显着的加速。当然，你应该确保字段是等效的。
+
+### 内联特性(Property)
+
+和Python的特性(Property)属性(Attribute)相似，Cython提供声明外部扩展类型的C级别特性的方法。这在用更快的C级别数据访问来遮蔽Python属性时很有用，还可以用来给，在Cython中使用现有的类型，增加特定的功能。
+
+举例来说，上面的 `complex` 类型也可以这么声明。
+
+```py
+cdef extern from "complexobject.h":
+
+    struct Py_complex:
+        double real
+        double imag
+
+    ctypedef class __builtin__.complex [object PyComplexObject]:
+        cdef Py_complex cval
+
+        @property
+        cdef inline double real(self):
+            return self.cval.real
+
+        @property
+        cdef inline double imag(self):
+            return self.cval.imag
+
+
+def cprint(complex c):
+    print(f"{c.real :.4f}{c.imag :+.4f}j")  # 使用 C 调用上面的特性方法.
+```
 
 ### 隐式导入
 
@@ -1081,7 +1205,6 @@ cdef extern class MyModule.Spam:
 
 ```py
 from MyModule import Spam
-
 ```
 
 语句将在模块加载时执行。
@@ -1091,7 +1214,6 @@ from MyModule import Spam
 ```py
 cdef extern class My.Nested.Package.Spam:
     ...
-
 ```
 
 您还可以使用 as 子句指定用于导入类型的备用名称，例如：
@@ -1099,40 +1221,93 @@ cdef extern class My.Nested.Package.Spam:
 ```py
 cdef extern class My.Nested.Package.Spam as Yummy:
    ...
-
 ```
 
 它对应于隐式 import 语句：
 
 ```py
 from My.Nested.Package import Spam as Yummy
-
 ```
 
 ### 类型名称与构造函数名称
 
-在 Cython 模块中，扩展类型的名称有两个不同的用途。在表达式中使用时，它指的是包含类型构造函数（即其类型对象）的模块级全局变量。但是，它也可以用作 C 类型名称来声明该类型的变量，参数和返回值。
+在 Cython 模块中，扩展类型的名称有两个不同的目的。在表达式中使用时，它指的是包含类型构造函数（即其类型对象）的模块级全局变量。它也可以用作 C 类型名称来声明该类型的变量，参数和返回值。
 
 当你声明：
 
 ```py
 cdef extern class MyModule.Spam:
     ...
-
 ```
 
-Spam 这个名字兼具这两个角色。可能有其他名称可以引用构造函数，但只有 Spam 可以用作类型名称。例如，如果要显式导入 MyModule，则可以使用`MyModule.Spam()`创建 Spam 实例，但不能将`MyModule.Spam`用作类型名称。
+Spam 这个名字兼具这两个角色。可能有其他名称可以引用构造函数，但只有 Spam 可以用作类型名称。例如，如果要显式导入 MyModule，则可以使用 `MyModule.Spam()` 创建 Spam 实例，但不能将 `MyModule.Spam` 用作类型名称。
 
-使用 as 子句时，as 子句中指定的名称也将接管这两个角色。所以如果你宣布：
+使用 as 子句时，as 子句中指定的名称也将接管这两个角色。所以如果你声明：
 
 ```py
 cdef extern class MyModule.Spam as Yummy:
     ...
-
 ```
 
-然后 Yummy 成为类型名称和构造函数的名称。同样，您可以通过其他方式获取构造函数，但只有 Yummy 可用作类型名称。
+那么 Yummy 成为类型名称和构造函数的名称。同样，您可以通过其他方式获取构造函数，但只有 Yummy 可用作类型名称。
 
 ## 公共扩展类型
 
-扩展类型可以声明为 public，在这种情况下会生成一个包含其对象 struct 和 type 对象声明的`.h`文件。通过将`.h`文件包含在您编写的外部 C 代码中，该代码可以访问扩展类型的属性。
+扩展类型可以声明为 public，在这种情况下会生成一个包含其对象 struct 和 type 对象声明的 `.h` 文件。通过将 `.h` 文件包含在您编写的外部 C 代码中，该代码可以访问扩展类型的属性。
+
+## 数据类扩展类型
+
+Cython支持和Python 3.7+ 标准库定义的数据类(**dataclasses**)行为类似的扩展类型。使用数据类的主要好处是它能自动生成简单的 `__init__` , `__repr__` 和 比较函数。Cython的实现几乎做到了和在Python标准库实现中尽可能的一模一样，因此这里的文件仅仅记录不同之处 -- 如果你准备使用数据类，你可以阅读 [Python标准库文档 -- 数据类](https://docs.python.org/3/library/dataclasses.html) 中对应的内容。
+
+数据类可以在Cython扩展类型（用 `cdef` 定义或者是使用 `@cython.class`装饰器的类型）上加 `@dataclasses.dataclass` 装饰器来声明。或者， `@cython.dataclasses.dataclass` 装饰器也可以用来加在任何类上让它变成一个扩展类以及一个数据类。如果你需要在字段上定义特殊特性，你可以使用 `dataclasses.field` 或者 `cython.dataclasses.field`。
+
+```py
+# 经典风格
+cimport cython
+try:
+    import typing
+    import dataclasses
+except ImportError:
+    pass  # 这些模块不需要真实存在，Cyton也可以把它们用做注解
+
+
+@dataclasses.dataclass
+cdef class MyDataclass:
+    # 字段可以用注解声明
+    a: cython.int = 0
+    b: double = dataclasses.field(default_factory = lambda: 10, repr=False)
+
+    # 也可以用 `cdec` 声明
+    cdef str c
+    c = "hello"  # 另起一行来赋默认值
+
+    # typing.InitVar 和 typing.ClassVar 也可以
+    d: dataclasses.InitVar[cython.double] = 5
+    e: typing.ClassVar[list] = []
+
+# 纯Python风格
+import cython
+try:
+    import typing
+    import dataclasses
+except ImportError:
+    pass  # The modules don't actually have to exists for Cython to use them as annotations
+
+@dataclasses.dataclass
+@cython.cclass
+class MyDataclass:
+    # fields can be declared using annotations
+    a: cython.int = 0
+    b: double = dataclasses.field(default_factory = lambda: 10, repr=False)
+
+
+    c: str = 'hello'
+
+
+    # typing.InitVar and typing.ClassVar also work
+    d: dataclasses.InitVar[double] = 5
+    e: typing.ClassVar[list] = []
+```
+
+你可以使用C级别的类型比如，结构、指针、C ++类。但是你会发现这些类与自动生成的特殊方法不兼容 -- 比如如果他们不能作为一个Python类的构造器参数，那么它们就不可能被转化为这个Python类。因此你必须使用
+`default_factory` 来初始化它们。就像是在python实现中一样，你可以用 `field()` 来控制属性中使用哪个特殊函数。
