--- a/docs/27.md
+++ b/docs/27.md
@@ -258,7 +258,13 @@ def main():
 
 # 纯Python风格
 # landscaping.py
+from cython.cimports.shrubbing import Shrubbery
+import shrubbing
 
+def main():
+    sh: Shrubbery
+    sh = shrubbing.standard_shrubbery()
+    print("Shrubbery size is", sh.width, 'x', sh.length)
 ```
 
 然后，你需要编译这两个模块，例如运用
